# CEDAR-DataAccess

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README.md  benchmarks.txt  cedar-config.in  configure.ac
docs/: CedarIntroduction.fm  CedarIntroduction.txt
testsuite/: Makefile.am  common_tests.exp.in
testsuite/cedar/: cedardump01.baseline  cedardump02.baseline  nrecords02.baseline  nrecords03.baseline  nrecords04.baseline  nrecords05.baseline  nrecords06.baseline  nrecords07.baseline
testsuite/cedar.0/: cedar_cedardump01.exp  cedar_cedardump02.exp  cedar_nrecords01.exp  cedar_nrecords02.exp  cedar_nrecords03.exp  cedar_nrecords04.exp  cedar_nrecords05.exp  cedar_nrecords06.exp  cedar_nrecords07.exp
testsuite/config/: unix.exp.in
testsuite/data/: adf870831a.cbf  cht811025a.cbf  dum870921a.cbf  jro840626a.cbf  mfp890505a.cbf  trf881125a.cbf  wfp911129a.cbf
unit-tests/: Makefile.am  TEST_CedarConstraintEvaluator.cc  TEST_CedarFileMultiThread.cc  arrayT.cc  errHandlerT.cc  exceptT.cc  strConvertT.cc
